apple/Sources/UniFFI/ant_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void uniffi_ant_ffi_fn_free_chunk(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_chunk_new(RustBuffer value, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_chunk_address(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_ant_ffi_fn_method_chunk_is_too_big(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_chunk_network_address(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_method_chunk_size(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_chunk_value(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_chunkaddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_chunkaddress_from_content(RustBuffer data, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_chunkaddress_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_chunkaddress_new(RustBuffer bytes, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_chunkaddress_to_bytes(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_chunkaddress_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_dataaddress_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_dataaddress_new(RustBuffer bytes, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_dataaddress_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_derivationindex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_derivationindex_from_bytes(RustBuffer bytes, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_derivationindex_to_bytes(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_derivedpubkey(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_derivedpubkey_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_derivedpubkey_new(void*_Nonnull public_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_derivedpubkey_to_bytes(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_derivedpubkey_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_ant_ffi_fn_method_derivedpubkey_verify(void*_Nonnull ptr, void*_Nonnull signature, RustBuffer msg, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_derivedsecretkey(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_derivedsecretkey_new(void*_Nonnull secret_key, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_derivedsecretkey_public_key(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_derivedsecretkey_sign(void*_Nonnull ptr, RustBuffer msg, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_mainpubkey(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_mainpubkey_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_mainpubkey_new(void*_Nonnull public_key, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_mainpubkey_derive_key(void*_Nonnull ptr, void*_Nonnull index, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_mainpubkey_to_bytes(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_mainpubkey_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_ant_ffi_fn_method_mainpubkey_verify(void*_Nonnull ptr, void*_Nonnull signature, RustBuffer msg, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_mainsecretkey(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_mainsecretkey_new(void*_Nonnull secret_key, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_mainsecretkey_random(RustCallStatus *_Nonnull out_status
    
);
void*_Nonnull uniffi_ant_ffi_fn_method_mainsecretkey_derive_key(void*_Nonnull ptr, void*_Nonnull index, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_mainsecretkey_public_key(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_mainsecretkey_random_derived_key(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_mainsecretkey_sign(void*_Nonnull ptr, RustBuffer msg, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_mainsecretkey_to_bytes(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_signature(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_signature_from_bytes(RustBuffer bytes, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_ant_ffi_fn_method_signature_parity(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_signature_to_bytes(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_signature_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);