csharp/AntFfi/Native/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_derivationindex_from_bytes")]
    public static extern IntPtr DerivationIndexFromBytes(RustBuffer bytes, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_derivationindex_to_bytes")]
    public static extern void DerivationIndexToBytes(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_derivationindex")]
    public static extern void FreeDerivationIndex(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Key Derivation - Signature

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_signature_from_bytes")]
    public static extern IntPtr SignatureFromBytes(RustBuffer bytes, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_signature_to_bytes")]
    public static extern void SignatureToBytes(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_signature_parity")]
    public static extern sbyte SignatureParity(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_signature_to_hex")]
    public static extern void SignatureToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_signature")]
    public static extern void FreeSignature(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Key Derivation - MainSecretKey

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_mainsecretkey_new")]
    public static extern IntPtr MainSecretKeyNew(IntPtr secretKey, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_mainsecretkey_random")]
    public static extern IntPtr MainSecretKeyRandom(ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_mainsecretkey_public_key")]
    public static extern IntPtr MainSecretKeyPublicKey(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_mainsecretkey_sign")]
    public static extern IntPtr MainSecretKeySign(IntPtr ptr, RustBuffer msg, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_mainsecretkey_derive_key")]
    public static extern IntPtr MainSecretKeyDeriveKey(IntPtr ptr, IntPtr index, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_mainsecretkey_random_derived_key")]
    public static extern IntPtr MainSecretKeyRandomDerivedKey(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_mainsecretkey_to_bytes")]
    public static extern void MainSecretKeyToBytes(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_mainsecretkey")]
    public static extern void FreeMainSecretKey(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Key Derivation - MainPubkey

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_mainpubkey_new")]
    public static extern IntPtr MainPubkeyNew(IntPtr publicKey, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_mainpubkey_from_hex")]
    public static extern IntPtr MainPubkeyFromHex(RustBuffer hex, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_mainpubkey_verify")]
    public static extern sbyte MainPubkeyVerify(IntPtr ptr, IntPtr signature, RustBuffer msg, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_mainpubkey_derive_key")]
    public static extern IntPtr MainPubkeyDeriveKey(IntPtr ptr, IntPtr index, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_mainpubkey_to_bytes")]
    public static extern void MainPubkeyToBytes(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_mainpubkey_to_hex")]
    public static extern void MainPubkeyToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_mainpubkey")]
    public static extern void FreeMainPubkey(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Key Derivation - DerivedSecretKey

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_derivedsecretkey_new")]
    public static extern IntPtr DerivedSecretKeyNew(IntPtr secretKey, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_derivedsecretkey_public_key")]
    public static extern IntPtr DerivedSecretKeyPublicKey(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_derivedsecretkey_sign")]
    public static extern IntPtr DerivedSecretKeySign(IntPtr ptr, RustBuffer msg, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_derivedsecretkey")]
    public static extern void FreeDerivedSecretKey(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Key Derivation - DerivedPubkey

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_derivedpubkey_new")]
    public static extern IntPtr DerivedPubkeyNew(IntPtr publicKey, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_derivedpubkey_from_hex")]
    public static extern IntPtr DerivedPubkeyFromHex(RustBuffer hex, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_derivedpubkey_verify")]
    public static extern sbyte DerivedPubkeyVerify(IntPtr ptr, IntPtr signature, RustBuffer msg, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_derivedpubkey_to_bytes")]
    public static extern void DerivedPubkeyToBytes(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_derivedpubkey_to_hex")]
    public static extern void DerivedPubkeyToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_derivedpubkey")]
    public static extern void FreeDerivedPubkey(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Data - Chunk

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_chunk_new")]
    public static extern IntPtr ChunkNew(RustBuffer value, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_chunk_value")]
    public static extern void ChunkValue(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_chunk_address")]
    public static extern IntPtr ChunkAddress(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_chunk_network_address")]
    public static extern void ChunkNetworkAddress(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_chunk_size")]
    public static extern ulong ChunkSize(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_chunk_is_too_big")]
    public static extern sbyte ChunkIsTooBig(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_chunk")]
    public static extern void FreeChunk(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Data - ChunkAddress

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_chunkaddress_new")]
    public static extern IntPtr ChunkAddressNew(RustBuffer bytes, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_chunkaddress_from_content")]
    public static extern IntPtr ChunkAddressFromContent(RustBuffer data, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_chunkaddress_from_hex")]
    public static extern IntPtr ChunkAddressFromHex(RustBuffer hex, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_chunkaddress_to_hex")]
    public static extern void ChunkAddressToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_chunkaddress_to_bytes")]
    public static extern void ChunkAddressToBytes(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_chunkaddress")]
    public static extern void FreeChunkAddress(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Data - DataAddress

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_dataaddress_new")]
    public static extern IntPtr DataAddressNew(RustBuffer bytes, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_dataaddress_from_hex")]
    public static extern IntPtr DataAddressFromHex(RustBuffer hex, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_dataaddress_to_hex")]
    public static extern void DataAddressToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);
